--- a/app/views/static_pages/promo_home.html.erb
+++ b/app/views/static_pages/promo_home.html.erb
@@ -53,18 +53,21 @@
                     <img src="/assets/marketing/talk.svg" class="process__icon">
                     <h3 class="process__title">Tell us about your campaign</h3>
                     <p class="process__desc">We handle the rest</p>
+                    <h3 class="process__num">01</h3>
                 </div>
 
                 <div class="process__tout">
                     <img src="/assets/marketing/dev.svg" class="process__icon">
                     <h3 class="process__title">We build your custom experience</h3>
                     <p class="process__desc">Devoted team of engineers</p>
+                    <h3 class="process__num">02</h3>
                 </div>
 
                 <div class="process__tout">
                     <img src="/assets/marketing/social.svg" class="process__icon">
                     <h3 class="process__title">Tell the world about it</h3>
                     <p class="process__desc">Share one simple link</p>
+                    <h3 class="process__num">03</h3>
                 </div>
             </div><!-- /.process-touts -->
         </div><!-- /.process__wrapper -->
